# QChat

./: .gitignore  CMakeLists.txt  README.md  qchat.sql
include/: public.hpp
include/db/: db.hpp
include/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessage.hpp  user.hpp  usermodel.hpp
include/redis/: redis.hpp
include/server/: qchatconfig.hpp  qchatserver.hpp  qchatservice.hpp
src/: CMakeLists.txt  main.cpp  qchatserver.cc
src/db/: db.cc
src/model/: friendmodel.cc  groupmodel.cc  offlinemessage.cc  usermodel.cc
src/redis/: redis.cc
src/server/: qchatconfig.cc  qchatserver.cc  qchatservice.cc  usermodel.cc
test/: msg.txt
